added errorHandler for errors from network, modified UI to display headers of respective output of destination and minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="placeholder_direction">Outbound</string>
     <string name="desc_background">Luas Image background</string>
     <string name="placeholder_error">Http Error, please try again</string>
+    <string name="sr_number">Sr</string>
+    <string name="destination">Destination</string>
+    <string name="duemins">dueMins</string>
+    <string name="minutes">%1$s mins</string>
 </resources>
